# django-rest-example

./: .env  .gitignore  README.md  manage.py  pyproject.toml
posts/: models.py  serializers.py  views.py
posts/fixtures/: comments.json  posts.json
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_creator_alter_comment_post_and_more.py
project/: settings.py  urls.py
tutorial/: environment.py  settings.py  urls.py
tutorial/users/: views.py
users/: models.py  serializers.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
